# mcp-tool

./: .env.example  .env.prod.example  .env.staging.example  .gitignore  Dockerfile  LICENSE  README.md  admin_from_source.js  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  main.py  portal_admin_live.html  portal_admin_live.js  pyproject.toml  trainer_from_source.js  trainer_live.html  trainer_live.js
.github/workflows/: ci.yml
src/enterprise_mcp/: __init__.py  approval.py  config.py  logging.py  models.py
src/enterprise_mcp/client/: __init__.py  openai_client.py
src/enterprise_mcp/data/: __init__.py  cache.py  db.py
src/enterprise_mcp/domain/: __init__.py  orders.py
src/enterprise_mcp/mcp/: __init__.py  common.py  http_server.py  stdio_server.py
src/enterprise_mcp/observability/: __init__.py  audit.py  context.py  events.py  metrics.py
src/enterprise_mcp/portal/: __init__.py  http.py  service.py  ui.py
src/enterprise_mcp/security/: __init__.py  context.py  middleware.py  rate_limit.py  rbac.py
src/enterprise_mcp/trainer/: __init__.py  http.py  service.py  ui.py
tests/: conftest.py  test_http_security.py  test_orders.py  test_portal.py  test_rbac.py  test_tenant_isolation.py  test_tool_smoke.py  test_trainer_ui.py
