[project]
name = "mcp-enterprise"
version = "0.1.0"
description = "Production-grade Python MCP starter with stdio, HTTP, approvals, Docker, and tests"
requires-python = ">=3.12"
dependencies = [
  "mcp[cli]>=1.17.0",
  "openai>=2.0.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "prometheus-client>=0.22.0",
  "redis>=6.0.0",
  "sqlalchemy>=2.0.40",
  "psycopg[binary]>=3.2.9",
  "uvicorn>=0.35.0",
  "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".pytest_cache", "pytest-cache-files-*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"

[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"
